--- a/references.bib
+++ b/references.bib
@@ -157,7 +157,14 @@
   month = {March},
   publisher = {Elsevier},
   url = {https://doi.org/10.1016/j.eswa.2020.113954}
-}
+},
+@book{HuntingtonKlein,
+  title = {The Effect: An Introduction to Research Design and Causality},
+  author = {Huntington-Klein, Nick},
+  year = {2022},
+  publisher = {CRC Press},
+  url = {https://theeffectbook.net/}  
+},
 https://theeffectbook.net/
 
 #Hierarchical modeling and analysis for spatial data
